[package]
name = "minigrep_npm"
version = "1.0.0"
edition = "2021"
authors = ["Nithin Puthalath Manoj nithinp.manoj@gmail.com"]
license = "MIT OR Apache-2.0"
description = "CLI tool to search words in files"
readme = "readme.md"
homepage = "https://github.com/nithinmanoj10/minigrep"
repository = "https://github.com/nithinmanoj10/minigrep"
keywords = ["cli", "grep", "words", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"